# aximate-cli

./: Cargo.toml  README.md
examples/: accounts.json
src/: accounts.rs  cli.rs  main.rs  slp.rs
