[package]
name = "aximate-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aximate"
path = "src/main.rs"

[dependencies]
aximate = "0.1.4"
clap = "3.0.0-beta"
serde = "1.0"
serde_json = "1.0"
tabular = "0.1"

[dependencies.tokio]
features = ["full"]
version = "1.14"

[dependencies.reqwest]
features = ["json"]
version = "0.11"